gccida/c1/gen_block_die
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/gen_block_die/src/dwarf2out.c:11718:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *imag; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/gen_block_die/src/dwarf2out.c:11747:21: error: use of undeclared identifier 'debug_info_level_0'
if ( ( unsigned int)debug_info_level_0 <= DINFO_LEVEL_TERSE ) 
                    ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/gen_block_die/src/obj/dwarf2out.o] Error 1
